--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -283,3 +283,33 @@ jobs:
           context: .
           file: ./.storybook/storybook.Dockerfile
           push: false
+
+  docs:
+    runs-on: ubuntu-24.04
+    permissions: {}
+    timeout-minutes: 10
+    concurrency:
+      group: ${{ github.workflow }}-docs-${{ github.ref }}
+    steps:
+      - name: Checkout files
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
+        with:
+          persist-credentials: false
+          submodules: true
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4
+        with:
+          run_install: false
+
+      - name: Install Node.js
+        uses: actions/setup-node@395ad3262231945c25e8478fd5baf05154b1d79f # v6
+        with:
+          node-version: "24.12.0"
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+
+      - run: pnpm i --frozen-lockfile
+
+      - name: Build TypeDoc
+        run: pnpm docs:build
