--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,7 @@
 		"./shared-kernel/repositories/*": "./shared-kernel/repositories/*.ts",
 		"./shared-kernel/services/*": "./shared-kernel/services/*.ts",
 		"./shared-kernel/types/*": "./shared-kernel/types/*.ts",
-		"./errors/*": "./errors/*.ts",
+		"./shared-kernel/errors/*": "./shared-kernel/errors/*.ts",
 		"./images/entities/*": "./images/entities/*.ts",
 		"./images/events/*": "./images/events/*.ts",
 		"./images/repositories/*": "./images/repositories/*.ts",
@@ -49,7 +49,7 @@
 			"./shared-kernel/repositories/*": "./dist/shared-kernel/repositories/*.js",
 			"./shared-kernel/services/*": "./dist/shared-kernel/services/*.js",
 			"./shared-kernel/types/*": "./dist/shared-kernel/types/*.js",
-			"./errors/*": "./dist/errors/*.js",
+			"./shared-kernel/errors/*": "./dist/shared-kernel/errors/*.js",
 			"./images/entities/*": "./dist/images/entities/*.js",
 			"./images/events/*": "./dist/images/events/*.js",
 			"./images/repositories/*": "./dist/images/repositories/*.js",
