--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.10/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.11/schema.json",
 	"css": {
 		"parser": {
 			"cssModules": true,
@@ -41,7 +41,7 @@
 		}
 	},
 	"files": {
-		"includes": ["**", "!security-audit.json", "!.claude"]
+		"includes": ["**", "!security-audit.json"]
 	},
 	"vcs": {
 		"enabled": true,
