--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,8 @@
 	"description": "Private pages and admin tools for s-hirano-ist.",
 	"type": "module",
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
+		"dev": "next dev --webpack",
+		"build": "next build --webpack",
 		"analyze": "ANALYZE=true pnpm build",
 		"start": "next start",
 		"typecheck": "tsc --noEmit"
@@ -24,7 +24,7 @@
 		"@vercel/speed-insights": "1.3.1",
 		"lucide-react": "0.563.0",
 		"minio": "8.0.6",
-		"next": "15.5.10",
+		"next": "16.1.6",
 		"next-auth": "5.0.0-beta.30",
 		"next-intl": "4.7.0",
 		"next-themes": "0.4.6",
