--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -12,9 +12,13 @@
 		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "preserve",
+		"jsx": "react-jsx",
 		"incremental": true,
-		"plugins": [{ "name": "next" }],
+		"plugins": [
+			{
+				"name": "next"
+			}
+		],
 		"paths": {
 			"@/*": ["./src/*"],
 			"@s-hirano-ist/s-ui/*": ["../packages/ui/*"],
@@ -28,7 +32,8 @@
 		".next/types/**/*.ts",
 		"vitest.config.ts",
 		".storybook/**/*.ts",
-		".storybook/**/*.tsx"
+		".storybook/**/*.tsx",
+		".next/dev/types/**/*.ts"
 	],
 	"exclude": ["node_modules"]
 }
