--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -14,8 +14,8 @@
 		"outDir": "./dist",
 		"rootDir": "./",
 		"esModuleInterop": true,
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext",
+		"module": "ESNext",
+		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
