--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -50,6 +50,7 @@
 	"license": "AGPL-3.0",
 	"dependencies": {
 		"@prisma/client": "7.3.0",
+		"@prisma/client-runtime-utils": "7.3.0",
 		"@prisma/extension-accelerate": "3.0.0",
 		"prisma": "7.3.0"
 	},
