--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -23,7 +23,7 @@
 		"update-raw-articles": "./dist/update-raw-articles.js"
 	},
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && tsc-esm-fix --target dist",
 		"clean": "rm -rf dist",
 		"typecheck": "tsc --noEmit",
 		"prepublishOnly": "pnpm run build",
@@ -74,6 +74,7 @@
 		"@types/jsdom": "27.0.0",
 		"@types/node": "24.10.9",
 		"@types/turndown": "5.0.6",
+		"tsc-esm-fix": "3.1.2",
 		"tsx": "4.21.0",
 		"typescript": "5.9.3"
 	}
