fix: next analyze

--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
-		"analyze": "ANALYZE=true pnpm build",
+		"analyze": "next experimental-analyze",
 		"start": "next start",
 		"typecheck": "tsc --noEmit"
 	},
@@ -39,7 +39,6 @@
 		"zod": "4.3.6"
 	},
 	"devDependencies": {
-		"@next/bundle-analyzer": "16.1.6",
 		"@tailwindcss/postcss": "4.1.18",
 		"@types/node": "24.10.9",
 		"@types/react": "19.2.9",
