--- a/biome.json
+++ b/biome.json
@@ -25,7 +25,7 @@
 				"noUselessElse": "error"
 			},
 			"suspicious": {
-				"noExplicitAny": "warn",
+				"noExplicitAny": "error",
 				"noUnknownAtRules": "off"
 			},
 			"complexity": {
