--- a/app/.env.sample
+++ b/app/.env.sample
@@ -33,6 +33,10 @@ MINIO_BUCKET_NAME=
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
 
+## Search API (RAG)
+SEARCH_API_URL= # e.g. http://localhost:3001
+SEARCH_API_KEY=
+
 ## Other
 NODE_TLS_REJECT_UNAUTHORIZED= # ="0" for self-signed certs only on localhost https://nodejs.org/api/cli.html#node_tls_reject_unauthorizedvalue
 
