--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -10,6 +10,7 @@
 		"fetch-notes": "./dist/fetch-notes.js",
 		"find-duplicate-json-articles": "./dist/find-duplicate-json-articles.js",
 		"rag-ingest": "./dist/rag/ingest.js",
+		"rag-ingest-db": "./dist/rag/ingest-db.js",
 		"rag-search": "./dist/rag/search.js",
 		"reset-articles": "./dist/reset-articles.js",
 		"reset-books": "./dist/reset-books.js",
@@ -33,6 +34,7 @@
 		"fetch-notes": "tsx src/fetch-notes.ts",
 		"find-duplicate-json-articles": "tsx src/find-duplicate-json-articles.ts",
 		"rag-ingest": "tsx src/rag/ingest.ts",
+		"rag-ingest-db": "tsx src/rag/ingest-db.ts",
 		"rag-search": "tsx src/rag/search.ts",
 		"reset-articles": "tsx src/reset-articles.ts",
 		"reset-books": "tsx src/reset-books.ts",
