fix: update raw article bug on shift-jis

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
 		"docs:build": "typedoc",
 		"docs:serve": "npx serve docs/api",
 		"docs:watch": "typedoc --watch",
-		"docs:clean": "rm -rf docs/api"
+		"docs:clean": "rm -rf docs/api",
+		"preinstall": "npx only-allow pnpm"
 	},
 	"dependencies": {
 		"next": "16.1.6",
