--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -68,6 +68,7 @@
 		"glob": "13.0.0",
 		"jsdom": "27.4.0",
 		"minio": "8.0.6",
+		"iconv-lite": "0.7.2",
 		"turndown": "7.2.2"
 	},
 	"devDependencies": {
