--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -85,7 +85,12 @@
 		"lucide-react": "0.563.0",
 		"next": "16.1.6",
 		"next-themes": "0.4.6",
-		"radix-ui": "1.4.3",
+		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-tabs": "^1.1.13",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
 		"react-markdown": "10.1.0",
