--- a/services/embedding-api/.env.sample
+++ b/services/embedding-api/.env.sample
@@ -1,6 +1,5 @@
 API_KEY="your-api-key-here"
-QDRANT_URL="http://localhost:6333"
-QDRANT_API_KEY="your-qdrant-api-key-here"
+PORT=3001
 
 # HuggingFace Transformers cache directory (optional)
 # Default: ~/.cache/huggingface/transformers
