--- a/app/.env.sample
+++ b/app/.env.sample
@@ -1,3 +1,4 @@
+# TODO:: app/src/env.ts を見るように と記述し、single source of truthにする（ここにしかない情報は app/src/env.ts に記述する）
 # Public ENVS
 
 ## Pushover
@@ -33,9 +34,11 @@ MINIO_BUCKET_NAME=
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
 
-## Search API (RAG)
-SEARCH_API_URL= # e.g. http://localhost:3001
-SEARCH_API_KEY=
+## Embedding API & Qdrant (RAG)
+EMBEDDING_API_URL= # e.g. http://localhost:3001
+EMBEDDING_API_KEY=
+QDRANT_URL= # e.g. http://localhost:6333
+QDRANT_API_KEY= # optional
 
 ## Other
 NODE_TLS_REJECT_UNAUTHORIZED= # ="0" for self-signed certs only on localhost https://nodejs.org/api/cli.html#node_tls_reject_unauthorizedvalue
