--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@s-hirano-ist/s-core": "workspace:*",
 		"@s-hirano-ist/s-database": "workspace:*",
+		"@s-hirano-ist/s-search": "workspace:*",
 		"@s-hirano-ist/s-notification": "workspace:*",
 		"@s-hirano-ist/s-ui": "workspace:*",
 		"@sentry/nextjs": "10.38.0",
