--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - run: pnpm i --frozen-lockfile
 
-      - name: Build TypeDoc
+      - name: Build docs (TypeDoc + DB schema)
         run: pnpm docs:build
 
       - name: Upload artifact
