--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -37,6 +37,7 @@
 		"prisma:migrate": "prisma migrate dev",
 		"prisma:deploy": "prisma migrate deploy",
 		"prisma:studio": "prisma studio",
+		"docs:build": "bash scripts/generate-db-docs.sh",
 		"build": "tsc --noEmit",
 		"postinstall": "pnpm prisma:generate",
 		"prepublishOnly": "pnpm prisma:generate",
@@ -54,7 +55,9 @@
 		"prisma": "7.3.0"
 	},
 	"devDependencies": {
+		"@softwaretechnik/dbml-renderer": "1.0.31",
 		"dotenv": "17.2.3",
+		"prisma-dbml-generator": "0.12.0",
 		"typescript": "5.9.3"
 	}
 }
