--- a/packages/scripts/package.json
+++ b/packages/scripts/package.json
@@ -23,7 +23,8 @@
 		"update-raw-articles": "./dist/update-raw-articles.js",
 		"ingest-notes": "./dist/ingest-notes.js",
 		"ingest-books": "./dist/ingest-books.js",
-		"ingest-articles": "./dist/ingest-articles.js"
+		"ingest-articles": "./dist/ingest-articles.js",
+		"ingest-images": "./dist/ingest-images.js"
 	},
 	"scripts": {
 		"build": "tsc && tsc-esm-fix --target dist",
@@ -49,7 +50,8 @@
 		"update-raw-articles": "tsx src/update-raw-articles.ts",
 		"ingest-notes": "tsx src/ingest-notes.ts",
 		"ingest-books": "tsx src/ingest-books.ts",
-		"ingest-articles": "tsx src/ingest-articles.ts"
+		"ingest-articles": "tsx src/ingest-articles.ts",
+		"ingest-images": "tsx src/ingest-images.ts"
 	},
 	"files": [
 		"dist",
@@ -74,6 +76,7 @@
 		"glob": "13.0.0",
 		"jsdom": "27.4.0",
 		"minio": "8.0.6",
+		"sharp": "0.33.5",
 		"iconv-lite": "0.7.2",
 		"turndown": "7.2.2"
 	},
