--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -32,7 +32,7 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsc",
+		"build": "tsc && tsc-esm-fix --target dist",
 		"clean": "rm -rf dist",
 		"typecheck": "tsc --noEmit"
 	},
@@ -44,6 +44,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "24.10.9",
+		"tsc-esm-fix": "3.1.2",
 		"typescript": "5.9.3"
 	}
 }
