--- a/app/.env.sample
+++ b/app/.env.sample
@@ -37,6 +37,8 @@ MINIO_SECRET_KEY=
 ## Embedding API & Qdrant (RAG)
 EMBEDDING_API_URL= # e.g. http://localhost:3001
 EMBEDDING_API_KEY=
+CF_ACCESS_CLIENT_ID= # Cloudflare Access Service Token
+CF_ACCESS_CLIENT_SECRET= # Cloudflare Access Service Token
 QDRANT_URL= # e.g. http://localhost:6333
 QDRANT_API_KEY= # optional
 
