refactor: embedding model

--- a/app/.env.sample
+++ b/app/.env.sample
@@ -1,58 +1,37 @@
-# TODO:: app/src/env.ts を見るように と記述し、single source of truthにする（ここにしかない情報は app/src/env.ts に記述する）
-# Public ENVS
+# Environment Variables
+#
+# 環境変数の定義・説明・バリデーションは app/src/env.ts を参照してください。
+# See app/src/env.ts for definitions, descriptions, and validation rules.
+#
+# Usage: Copy this file to .env.local and fill in the values.
+#   cp .env.sample .env.local
 
-## Pushover
-PUSHOVER_URL="https://api.pushover.net/1/messages.json"
+# --- Public ---
+NEXT_PUBLIC_SENTRY_DSN=
 
-## Sentry
-NEXT_PUBLIC_SENTRY_DSN="https://cee646a424e92410d7f08ae439cf1fbf@o4508058782531584.ingest.us.sentry.io/4508058784825344"
-
-# Private ENVS
-
-## Pushover
+# --- Server ---
+DATABASE_URL=
+PUSHOVER_URL=
 PUSHOVER_USER_KEY=
 PUSHOVER_APP_TOKEN=
-
-## Prisma connection
-DATABASE_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME"
-# POSTGRES_DIRECT_URL="postgresql://USERNAME:PASSWORD@IP_ADDRESS:PORT/DB_NAME?schema=SCHEMA_NAME" # not needed for prisma postgresql
-
-## Auth.js
-AUTH_SECRET= # generate by `openssl rand -base64 32` command
+AUTH_SECRET=
 AUTH0_CLIENT_ID=
 AUTH0_CLIENT_SECRET=
 AUTH0_ISSUER_BASE_URL=
-
-## Sentry
 SENTRY_AUTH_TOKEN=
 SENTRY_REPORT_URL=
-
-## MinIO
 MINIO_HOST=
 MINIO_PORT=
 MINIO_BUCKET_NAME=
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
-
-## Embedding API & Qdrant (RAG)
-EMBEDDING_API_URL= # e.g. http://localhost:3001
+EMBEDDING_API_URL=
 EMBEDDING_API_KEY=
-CF_ACCESS_CLIENT_ID= # Cloudflare Access Service Token
-CF_ACCESS_CLIENT_SECRET= # Cloudflare Access Service Token
-QDRANT_URL= # e.g. http://localhost:6333
-QDRANT_API_KEY= # optional
+CF_ACCESS_CLIENT_ID=
+CF_ACCESS_CLIENT_SECRET=
+QDRANT_URL=
+QDRANT_API_KEY=
 
-## Other
-NODE_TLS_REJECT_UNAUTHORIZED= # ="0" for self-signed certs only on localhost https://nodejs.org/api/cli.html#node_tls_reject_unauthorizedvalue
-
-# For CI
-
-## t3-env
+# --- Non-validated (not in env.ts) ---
+NODE_TLS_REJECT_UNAUTHORIZED=
 SKIP_ENV_VALIDATION=
-
-# Only for dev env
-
-## Docker Compose
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=s-private-db
