--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -4,28 +4,57 @@
 	"type": "module",
 	"exports": {
 		"./config": {
-			"types": "./dist/config.d.ts",
-			"import": "./dist/config.js"
+			"types": "./src/config.ts",
+			"default": "./src/config.ts"
 		},
 		"./embedding": {
-			"types": "./dist/embedding.d.ts",
-			"import": "./dist/embedding.js"
+			"types": "./src/embedding.ts",
+			"default": "./src/embedding.ts"
 		},
 		"./embedding-client": {
-			"types": "./dist/embedding-client.d.ts",
-			"import": "./dist/embedding-client.js"
+			"types": "./src/embedding-client.ts",
+			"default": "./src/embedding-client.ts"
 		},
 		"./qdrant-client": {
-			"types": "./dist/qdrant-client.d.ts",
-			"import": "./dist/qdrant-client.js"
+			"types": "./src/qdrant-client.ts",
+			"default": "./src/qdrant-client.ts"
 		},
 		"./chunker": {
-			"types": "./dist/chunker.d.ts",
-			"import": "./dist/chunker.js"
+			"types": "./src/chunker.ts",
+			"default": "./src/chunker.ts"
 		},
 		"./ingest": {
-			"types": "./dist/ingest.d.ts",
-			"import": "./dist/ingest.js"
+			"types": "./src/ingest.ts",
+			"default": "./src/ingest.ts"
+		}
+	},
+	"publishConfig": {
+		"access": "public",
+		"exports": {
+			"./config": {
+				"types": "./dist/config.d.ts",
+				"import": "./dist/config.js"
+			},
+			"./embedding": {
+				"types": "./dist/embedding.d.ts",
+				"import": "./dist/embedding.js"
+			},
+			"./embedding-client": {
+				"types": "./dist/embedding-client.d.ts",
+				"import": "./dist/embedding-client.js"
+			},
+			"./qdrant-client": {
+				"types": "./dist/qdrant-client.d.ts",
+				"import": "./dist/qdrant-client.js"
+			},
+			"./chunker": {
+				"types": "./dist/chunker.d.ts",
+				"import": "./dist/chunker.js"
+			},
+			"./ingest": {
+				"types": "./dist/ingest.d.ts",
+				"import": "./dist/ingest.js"
+			}
 		}
 	},
 	"files": [
