--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -23,6 +23,7 @@ COPY packages/core/package.json ./packages/core/package.json
 COPY packages/scripts/package.json ./packages/scripts/package.json
 COPY packages/notification/package.json ./packages/notification/package.json
 COPY packages/search/package.json ./packages/search/package.json
+COPY services/embedding-api/package.json ./services/embedding-api/package.json
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
@@ -39,6 +40,7 @@ COPY --from=deps /app/packages/core/node_modules/ ./packages/core/node_modules/
 COPY --from=deps /app/packages/scripts/node_modules/ ./packages/scripts/node_modules/
 COPY --from=deps /app/packages/notification/node_modules/ ./packages/notification/node_modules/
 COPY --from=deps /app/packages/search/node_modules/ ./packages/search/node_modules/
+COPY --from=deps /app/services/embedding-api/node_modules/ ./services/embedding-api/node_modules/
 
 # Copy rest of the application code
 COPY . .
