fix: qdrant search features

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -62,6 +62,11 @@ jobs:
             DATABASE_URL=${{ secrets.DATABASE_URL }}
             SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
             SENTRY_REPORT_URL=${{ secrets.SENTRY_REPORT_URL }}
+            EMBEDDING_API_URL=${{secrets.EMBEDDING_API_URL}}
+            EMBEDDING_API_KEY=${{secrets.EMBEDDING_API_KEY}}
+            CF_ACCESS_CLIENT_ID=${{secrets.CF_ACCESS_CLIENT_ID}}
+            CF_ACCESS_CLIENT_SECRET=${{secrets.CF_ACCESS_CLIENT_SECRET}}
+            QDRANT_URL=${{secrets.QDRANT_URL}}
 
       - name: Show pushed image tags
         run: echo "Pushed docker image with tag ${{ env.PACKAGE_VERSION }}"
