--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -22,6 +22,7 @@ jobs:
       database_release_created: ${{ steps.release.outputs['packages/database--release_created'] }}
       notification_release_created: ${{ steps.release.outputs['packages/notification--release_created'] }}
       scripts_release_created: ${{ steps.release.outputs['packages/scripts--release_created'] }}
+      search_release_created: ${{ steps.release.outputs['packages/search--release_created'] }}
     steps:
       - uses: googleapis/release-please-action@16a9c90856f42705d54a6fda1823352bdc62cf38 # v4
         id: release
@@ -87,6 +88,13 @@ jobs:
       - name: Publish @s-hirano-ist/s-scripts
         if: ${{ needs.release-please.outputs.scripts_release_created == 'true' }}
         working-directory: packages/scripts
+        run: pnpm publish --no-git-checks --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Publish @s-hirano-ist/s-search
+        if: ${{ needs.release-please.outputs.search_release_created == 'true' }}
+        working-directory: packages/search
         run: pnpm publish --no-git-checks --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
