--- a/app/.env.sample
+++ b/app/.env.sample
@@ -25,6 +25,7 @@ MINIO_PORT=
 MINIO_BUCKET_NAME=
 MINIO_ACCESS_KEY=
 MINIO_SECRET_KEY=
+MINIO_USE_SSL=
 EMBEDDING_API_URL=
 EMBEDDING_API_KEY=
 CF_ACCESS_CLIENT_ID=
