--- a/services/embedding-api/Dockerfile
+++ b/services/embedding-api/Dockerfile
@@ -17,6 +17,12 @@ COPY packages/search/ ./packages/search/
 COPY services/embedding-api/ ./services/embedding-api/
 COPY pnpm-workspace.yaml package.json pnpm-lock.yaml ./
 RUN pnpm --filter @s-hirano-ist/s-search build
+# Patch s-search exports to use dist/ for Node.js ESM (pnpm deploy does not apply publishConfig for workspace deps)
+RUN node -e "\
+  const fs = require('fs'); \
+  const pkg = JSON.parse(fs.readFileSync('./packages/search/package.json', 'utf8')); \
+  pkg.exports = pkg.publishConfig.exports; \
+  fs.writeFileSync('./packages/search/package.json', JSON.stringify(pkg, null, '\t') + '\n');"
 RUN pnpm --filter @s-hirano-ist/embedding-api build
 RUN pnpm --filter @s-hirano-ist/embedding-api deploy --prod --legacy /app/deployed
 
