--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"license-checker-rseidelsohn": "4.4.2",
 		"playwright": "1.58.0",
 		"storybook": "10.2.1",
+		"storybook-next-intl": "10.0.1",
 		"tailwindcss": "4.1.18",
 		"typedoc": "0.28.16",
 		"typedoc-plugin-mdn-links": "5.1.1",
