--- a/services/embedding-api/tsconfig.json
+++ b/services/embedding-api/tsconfig.json
@@ -13,7 +13,8 @@
 		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"verbatimModuleSyntax": true
+		"verbatimModuleSyntax": true,
+		"rewriteRelativeImportExtensions": true
 	},
 	"include": ["src/**/*.ts"],
 	"exclude": ["node_modules", "dist"]
