fix: tsconfig of scripts

--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -48,6 +48,34 @@
 		"qdrant",
 		"embedding"
 	],
+	"publishConfig": {
+		"exports": {
+			"./config": {
+				"types": "./dist/config.d.ts",
+				"import": "./dist/config.js"
+			},
+			"./embedding": {
+				"types": "./dist/embedding.d.ts",
+				"import": "./dist/embedding.js"
+			},
+			"./embedding-client": {
+				"types": "./dist/embedding-client.d.ts",
+				"import": "./dist/embedding-client.js"
+			},
+			"./qdrant-client": {
+				"types": "./dist/qdrant-client.d.ts",
+				"import": "./dist/qdrant-client.js"
+			},
+			"./chunker": {
+				"types": "./dist/chunker.d.ts",
+				"import": "./dist/chunker.js"
+			},
+			"./ingest": {
+				"types": "./dist/ingest.d.ts",
+				"import": "./dist/ingest.js"
+			}
+		}
+	},
 	"scripts": {
 		"build": "tsc",
 		"clean": "rm -rf dist",
