--- a/compose.yaml
+++ b/compose.yaml
@@ -63,30 +63,30 @@ services:
       - MINIO_BUCKET_NAME=${MINIO_BUCKET_NAME}
     networks:
       - tunnel-net
-
-  qdrant:
-    image: qdrant/qdrant:v1.16.3
-    container_name: qdrant
-    restart: unless-stopped
-    environment:
-      - QDRANT__SERVICE__API_KEY=${QDRANT_API_KEY}
-    ports:
-      - "6333:6333"
-    volumes:
-      - qdrant-data:/qdrant/storage
-    networks:
-      - tunnel-net
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "bash",
-          "-c",
-          "exec 3<>/dev/tcp/localhost/6333 && echo -e 'GET /healthz HTTP/1.1\r\nHost: localhost\r\n\r\n' >&3 && cat <&3 | grep -q 200",
-        ]
-      interval: 30s
-      timeout: 3s
-      retries: 3
+  # TODO: enable qdrant
+  # qdrant:
+  #   image: qdrant/qdrant:v1.16.3
+  #   container_name: qdrant
+  #   restart: unless-stopped
+  #   environment:
+  #     - QDRANT__SERVICE__API_KEY=${QDRANT_API_KEY}
+  #   ports:
+  #     - "6333:6333"
+  #   volumes:
+  #     - qdrant-data:/qdrant/storage
+  #   networks:
+  #     - tunnel-net
+  #   healthcheck:
+  #     test:
+  #       [
+  #         "CMD",
+  #         "bash",
+  #         "-c",
+  #         "exec 3<>/dev/tcp/localhost/6333 && echo -e 'GET /healthz HTTP/1.1\r\nHost: localhost\r\n\r\n' >&3 && cat <&3 | grep -q 200",
+  #       ]
+  #     interval: 30s
+  #     timeout: 3s
+  #     retries: 3
 
   cloudflared:
     image: cloudflare/cloudflared:latest
